# slugify

./: Cargo.toml  Justfile  LICENSE  README.md
src/: main.rs
