[package]
name = "slugify"
version = "0.1.0"
edition = "2021"
description = "A simple CLI tool to slugify strings"
authors = ["Atahan Yorgancı <atahanyorganci@hotmail.com>"]
license = "MIT"

[profile.release]
lto = true
debug = false
opt-level = 3

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
slug = "0.1.5"
